samples/_failures_safe/1761602605_1ac744_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d21ddcb1.c: In function ‘main’:
./samples/SAFE/__tmp_d21ddcb1.c:148:26: error: missing terminating " character
  148 |     int rows2 = read_int("Enter rows for matrix B (1-100
      |                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d21ddcb1.c:148:5: error: expected expression at end of input
  148 |     int rows2 = read_int("Enter rows for matrix B (1-100
      |     ^~~
./samples/SAFE/__tmp_d21ddcb1.c:148:17: error: too few arguments to function ‘read_int’
  148 |     int rows2 = read_int("Enter rows for matrix B (1-100
      |                 ^~~~~~~~
./samples/SAFE/__tmp_d21ddcb1.c:16:5: note: declared here
   16 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_d21ddcb1.c:148:5: error: expected declaration or statement at end of input
  148 |     int rows2 = read_int("Enter rows for matrix B (1-100
      |     ^~~
